Fixed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-final-exam",
+  "name": "food-truck",
   "version": "1.0.0",
   "description": "Javascript final exam",
   "main": "",
